--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,9 +1,9 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
-    <%- include('includes/navigation.ejs') %>
+    <%- include('../includes/navigation.ejs') %>
 
 
     <main>
@@ -15,14 +15,17 @@
                         <h1 class="product__title"><%= product.title %></h1>
                     </header>
                     <div class="card__image">
-                        <img src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg" alt="A Book">
+                        <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                     </div>
                     <div class="card__content">
-                        <h2 class="product__price">$19.99</h2>
-                        <p class="product__description">A very interesting book about so many even more interesting things!</p>
+                        <h2 class="product__price">$<%= product.price %></h2>
+                        <p class="product__description"><%= product.description %></p>
                     </div>
                     <div class="card__actions">
-                        <button class="btn">Add to Cart</button>
+                        <a href="/admin/edit-product" class="btn">Edit</a>
+                        <form action="/admin/delete-product" method="post">
+                            <button class="btn" type="submit">Delete</button>
+                        </form>
                     </div>
                 </article>
                 <% } %>
@@ -31,4 +34,4 @@
             <h1>No Products Found</h1>
         <% } %>
     </main>
-<%- include('includes/end.ejs') %>
+<%- include('../includes/end.ejs') %>
