--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,7 +1,25 @@
 <%- include('../includes/head.ejs') %>
-</head>
+    </head>
 
-<body>
-    <%- include('../includes/navigation.ejs') %>
-    <%- include('../includes/end.ejs') %>
-
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if (products.length > 0) { %>
+                <ul>
+                    <% products.forEach(p => { %>
+                        <li>
+                            <p>
+                                <%= p.productData.title %> (<%= p.quantity %>)
+                                <form action="/cart-delete-item" method="post">
+                                    <input type="hidden" name="productId" value="<%= p.productData.id %>">
+                                    <button class="btn" type="submit">Delete</button>
+                                </form>
+                            </p>
+                        </li>
+                    <% }) %>
+                </ul>
+            <% } else { %>
+                <h1>No products in cart</h1>
+            <% } %>
+        </main>
+        <%- include('../includes/end.ejs') %>
